# my-rusty-blog

./: .gitignore  Cargo.toml  README.md  init.sql
src/: entity.rs  main.rs  persist.rs  server.rs
templates/: base.html  new_post.html  posts.html
templates/partials/: libs.html  menu.html
