[package]
name = "my-rusty-blog"
version = "0.1.0"
authors = ["Stas Norochevskiy <snoroc200@cable.comcast.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.125"
tera = "1.0"
mysql = "*"
lazy_static = "*"